--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,10 @@
+#RULE
+
 #TODO
 - マッチングのテストを書く(複数組のマッチングが正常に行われるか)
 - レンダラーの3D化
+- Web Clientのsvelte化
 
 #実装済み
-- ハッシュセットを用いたゲーム管理システム
+- ハッシュセット(?)を用いたゲーム管理システム
 - マッチングにキューを用いる(先頭の2プレイヤーをマッチングさせる)
